--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,3 +18,9 @@ body {
     margin: 15px 15px 15px 15px;
     font-size: 50px;
 }
+
+#reset-button input {
+    height: 50px;
+    width: 300px;
+    font-size: large;
+}
