--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,7 +2,9 @@ body {
     background-color: rgb(228, 155, 155);
     text-align: center;
 }
-
+h1 {
+    background-color: rgb(205, 225, 241);
+}
 
 #game-board input {
     vertical-align: top;
